added missing composer.json requirements, close #6

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,11 @@
     "description": "Standard library files required by PocketMine-MP and related projects",
     "type": "library",
     "license": "LGPL-3.0",
-    "require": {},
+    "require": {
+        "php": ">=7.2",
+        "ext-pthreads": "~3.2.0",
+        "ext-reflection": "*"
+    },
     "autoload": {
         "classmap": ["./"]
     }
