--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,7 @@
     "type": "library",
     "license": "LGPL-3.0",
     "require": {
-        "php": ">=7.2",
-        "ext-pthreads": "~3.2.0",
-        "ext-reflection": "*"
+        "php": ">=7.2"
     },
     "autoload": {
         "classmap": ["./"]
