--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "require": {
         "php": ">=7.2"
     },
+    "require-dev": {
+        "phpstan/phpstan": "^0.12.8"
+    },
     "autoload": {
         "classmap": ["./"]
     }
