--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "license": "LGPL-3.0",
     "require": {
-        "php": ">=7.2"
+        "php": "^7.2 || ^8.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.8"
